# odss2dash

./: .gitignore  CHANGELOG.md  Cargo.toml  ChangeLog.md  DEVELOPMENT.md  README.md  develop.md  justfile  odss2dash.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  compose.yml  docker-compose.yml
src/: config.rs  dispatched_info.rs  dispatcher.rs  main.rs  platform_info.rs  publisher.rs  serve_dispatch.rs  tethysdash_client.rs  trackdb_client.rs
src/server/: dispatched.rs  health.rs  metrics.rs  mod.rs  rapidoc.rs  swagger.rs  trackdb.rs
