[package]
name = "o2d"
version = "2.0.0"
authors = [
    "Carlos A. Rueda <carueda@mbari.org>",
]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anstyle = "1.0.1" # for coloring clap help
clap = { version = "4.3.10", features = ["derive", "unstable-styles"] }
attohttpc = { version = "0.25.0", features = ["json"] }
axum = "0.6.18"
dotenv = "0.15.0"
env_logger = "0.10.0"
humantime-serde = "1.1.1"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
toml = "0.7.5"
utoipa = "3.3.0"
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }

[dev-dependencies]
axum-test = "10.1.0"
pretty_assertions = "1.4.0"
